<resources>
    <string name="app_name">SacApp</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">SacApp IEEE Sección Colombia</string>
    <string name="nav_header_subtitle">Ramírez - Solano</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_event">Eventos</string>
    <string name="menu_news">Noticias</string>

    <string name="menu_sub">Acerca de ...</string>
    <string name="menu_how">¿Cómo funciona?</string>
    <string name="menu_we">Nosotros</string>

    <string name="title_activity_index">Inicio</string>
    <string name="dummy_content">Bienvenido\nSacApp</string>
    <string name="title_activity_login">Identifícate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>

    <string name="event_title">Calendario de Eventos</string>

    <string name="title_homefragment">Inicio</string>
    <string name="title_eventfragment">Eventos</string>
    <string name="title_newsfragment">Noticias</string>

    <string name="title_howfragment">¿Cómo funciona?</string>
    <string name="title_wefragment">Nosotros</string>



</resources>
