<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/calendar"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/newspaper"
            android:title="@string/menu_news" />

    </group>

    <item android:title="@string/menu_sub">
        <menu>
            <item
                android:id="@+id/nav_how"
                android:icon="@drawable/question"
                android:title="@string/menu_how" />
            <item
                android:id="@+id/nav_we"
                android:icon="@drawable/users_cog"
                android:title="@string/menu_we" />
        </menu>
    </item>
</menu>
